# Anthropic

./: .flake8  .gitignore  docker-compose.yml  latex_compiler.sh  mypy.ini  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
devcontainer/: Dockerfile  devcontainer.json
examples/superstring_theory/: superstring_action.tex
src/interactive_model/: send_query.py
src/interactive_model/queries/: hello_world.py  hello_world_latex.py  readme.md  superstring_theory.py
src/latex/: hello_world_latex.tex  superstring_theory.tex
src/model_construction/: __init__.py  claude_model.py  max_token_exception.py  token_parser.py
tests/: readme.md
